cmake_minimum_required(VERSION 3.12)

project(SimTest LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


add_executable(${PROJECT_NAME} main.cpp)

target_link_libraries(${PROJECT_NAME} PRIVATE HYSimulation)

# 包含头文件（来自 src/）
target_include_directories(${PROJECT_NAME} PRIVATE
    ${PROJECT_SOURCE_DIR}/../src
)


# 输出路径配置（与主工程一致）
set(OUTPUT_DIR "${CMAKE_SOURCE_DIR}/bin")

if(WIN32)
    set_target_properties(${PROJECT_NAME} PROPERTIES
        FOLDER "all_proj"
        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIR}/Debug"
		RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIR}/Release"
		RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${OUTPUT_DIR}/RelWithDebInfo"

		ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIR}/Debug"
		ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIR}/Release"
		ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${OUTPUT_DIR}/RelWithDebInfo"
	
		LIBRARY_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIR}/Debug"
		LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIR}/Release"
		LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${OUTPUT_DIR}/RelWithDebInfo"
    )
	
	
endif()
